--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         <div id="output-data-link">
             <h2>Data Link</h2>
             <label>Start: </label><input type="text" readonly id="start">
-            <label>Length: </label><input type="text" readonly id="len">
+            <label>Length: </label><input type="text" readonly id="length">
             <br>
             <label>Direction: </label><input type="text" readonly id="direction">
             <label>Primary Message:</label><input type="text" readonly id="prm">
             <label>Link Function Code: </label><input type="text" readonly id="link_function_code">
-            <label>Control: </label><input type="text" readonly id="control">
             <br>
             <label>Destination: </label><input type="text" readonly id="destination">
             <label>Source: </label><input type="text" readonly id="source">
