--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <label>Data</label><input type="text" readonly id="application-header-data">
             <br>
             <label>Application Control: </label><input type="text" readonly id="application_control">
+            <label>FIR: </label><input type="text" readonly id="application_control_fir">
+            <label>FIN: </label><input type="text" readonly id="application_control_fin">
+            <label>CON: </label><input type="text" readonly id="application_control_con">
+            <label>UNS: </label><input type="text" readonly id="application_control_uns">
+            <label>SEQ: </label><input type="text" readonly id="application_control_seq">
+            <br>
             <label>Application Function Code: </label><input type="text" readonly id="app_function_code">
             <label>Internal Indication (LSB): </label><input type="text" readonly id="internal_indications_lsb">
             <label>Internal Indication (MSB): </label><input type="text" readonly id="internal_indications_msb">
