this is just getting more and more messy...

--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@
         <div id="output-objects">
             <div id="output-object-0">
                 <h2>Object Header 0</h2>
-                <label>Data: </label><input type="text" readyonly id="object-data"><br>
+                <label>Data: </label><input type="text" readonly id="object-data"><br>
                 <label>Group: </label><input type="text" readonly id="group">
                 <label>Variation: </label><input type="text" readonly id="variation">
                 <label>Qualifier: </label><input type="text" readonly id="qualifier">
                 <label>Range: </label><input type="text" readonly id="range">
-
             </div>
         </div>
         <script src="app.js"></script>
